fix scrollbar color

--- a/src/style/custom.scss
+++ b/src/style/custom.scss
@@ -1,15 +1,15 @@
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 8px #6e7793;
-    background-color: #6e7793;
+  -webkit-box-shadow: inset 0 0 8px transparent;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-    background-color: #9ca4ba;
+  width: 8px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 8px #9ca4ba;
-    background-color: #9ca4ba;
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 8px #3e465c;
+  background-color: transparent;
 }
